--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Blog</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
   <body class="container">
@@ -84,6 +84,17 @@
               </tr>
             </tbody>
           </table>
+    </div>
+
+    <div>
+        <div>
+            <h1>What is the work of quizTimer() function ?</h1>
+            <p>The quizTimer() function counts how long the user takes time to answer all the questions and also displays the time in the result. quizTimer() function takes a boolean parameter count time using the function setInterval()  and displays the time.</p>
+        </div>
+        <div>
+            <h1>What is the work of chooseQuiz() function ?</h1>
+            <p>The quizTimer() function counts how long the user takes time to answer all the questions and also displays the time in the result. quizTimer() function takes a boolean parameter count time using the function setInterval()  and displays the time.</p>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
