--- a/blog.html
+++ b/blog.html
@@ -1,101 +1,140 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Blog</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  </head>
-  <body class="container">
-    <div>
-        <h1>Difference between local storage, session storage, and cookies?</h1>
-        <table class="table">
-            <thead>
-              <tr>
-                <th scope="col">local storage</th>
-                <th scope="col">session storage</th>
-                <th scope="col">cookies</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Stores data in the browser without any expiration date.</td>
-                <td>Stores data in the browser for a session.</td>
-                <td>Stores data in small text file.</td>
-              </tr>
-              <tr>
-                <td>Saves data in key-value pairs in the browser.</td>
-                <td>Saves data in pairs key-value in the browser.</td>
-                <td>Naturally sent by visited websides.</td>
-              </tr>
-              <tr>
-                <tr>Data is not deleted when the browser is closed.</tr>
-                <td>Data is deleted when the browser is closed.</td>
-                <td>Sent to user computer through browser.</td>
-              </tr>
-              <tr>
-                <tr>Data is available for future sessions.</tr>
-                <td>Data is not available for future session.</td>
-                <td>Is not a program doesn’t perform any function.</td>
-              </tr>
-              <tr>
-                <tr>Return the data in string format.</tr>
-                <td>Return the data in string format</td>
-                <td>Stores data in key-value pairs</td>
-              </tr>
-            </tbody>
-          </table>
-    </div>
-    <div>
-        <h1>Difference between map , filter, forEach, find?</h1>
-        <table class="table">
-            <thead>
-              <tr>
-                <th scope="col">Map</th>
-                <th scope="col">Filter</th>
-                <th scope="col">forEach</th>
-                <th scope="col">find</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>The map()
-                     executes the same code on every element in an array and returns a new array with the updated elements</td>
-                <td>The filter() method calls a provided function for each element in array and verifies the condition given in the provided function and passes only those elements that satisfy the given condition</td>
-                <td>The forEach()is used to execute the same code on every element in an array but does not change the array and it returns undefine</td>
-                <td>The find()
-                     method returns the first element in the provided array that satisfies the provided testing function.</td>
-              </tr>
-              <tr>
-                <td>The map() method loops through each element in array and calls the provided function for each element.</td>
-                <td>.filter()
-                     checks every element in an array to see if it meets a certain criteria and returns a new array with the elements that return truthy
-                     for the criteria.</td>
-                <td>.forEach()
-                    , is used to execute the same code on every element in an array but does not change the array and it returns undefined.</td>
-                <td>The first element in the array that satisfies the provided testing function. Otherwise, undefined
-                     is returned.</td>
-              </tr>
-              <tr>
-                <td>Return an new array.</td>
-                <td>Return an new array</td>
-                <td>Returns undefined.</td>
-                <td>Return a single value and undefine.</td>
-              </tr>
-            </tbody>
-          </table>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+</head>
+
+<body class="container">
+    <div class="qustion">
+        <div>
+            <h3>Difference between local storage, session storage, and cookies?</h3>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">local storage</th>
+                        <th scope="col">session storage</th>
+                        <th scope="col">cookies</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Stores data in the browser without any expiration date.</td>
+                        <td>Stores data in the browser for a session.</td>
+                        <td>Stores data in small text file.</td>
+                    </tr>
+                    <tr>
+                        <td>Saves data in key-value pairs in the browser.</td>
+                        <td>Saves data in pairs key-value in the browser.</td>
+                        <td>Naturally sent by visited websides.</td>
+                    </tr>
+                    <tr>
+                    <tr>Data is not deleted when the browser is closed.</tr>
+                    <td>Data is deleted when the browser is closed.</td>
+                    <td>Sent to user computer through browser.</td>
+                    </tr>
+                    <tr>
+                    <tr>Data is available for future sessions.</tr>
+                    <td>Data is not available for future session.</td>
+                    <td>Is not a program doesn’t perform any function.</td>
+                    </tr>
+                    <tr>
+                    <tr>Return the data in string format.</tr>
+                    <td>Return the data in string format</td>
+                    <td>Stores data in key-value pairs</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div>
+            <h3>Difference between map , filter, forEach, find?</h3>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">Map</th>
+                        <th scope="col">Filter</th>
+                        <th scope="col">forEach</th>
+                        <th scope="col">find</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>The map()
+                             executes the same code on every element in an array and returns a new array with the
+                            updated elements</td>
+                        <td>The filter() method calls a provided function for each element in array and verifies the
+                            condition given in the provided function and passes only those elements that satisfy the
+                            given condition</td>
+                        <td>The forEach()is used to execute the same code on every element in an array but does not
+                            change the array and it returns undefine</td>
+                        <td>The find()
+                             method returns the first element in the provided array that satisfies the provided testing
+                            function.</td>
+                    </tr>
+                    <tr>
+                        <td>The map() method loops through each element in array and calls the provided function for
+                            each element.</td>
+                        <td>.filter()
+                             checks every element in an array to see if it meets a certain criteria and returns a new
+                            array with the elements that return truthy
+                             for the criteria.</td>
+                        <td>.forEach()
+                            , is used to execute the same code on every element in an array but does not change the
+                            array and it returns undefined.</td>
+                        <td>The first element in the array that satisfies the provided testing function.
+                            Otherwise, undefined
+                             is returned.</td>
+                    </tr>
+                    <tr>
+                        <td>Return an new array.</td>
+                        <td>Return an new array</td>
+                        <td>Returns undefined.</td>
+                        <td>Return a single value and undefine.</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div>
+            <h3>What is eventloop? How it's works?</h3>
+            <p>JavaScript has a runtime model based on an event loop, which is responsible for executing the code,
+                collecting and processing events, and executing queued sub-tasks. This model is quite different from
+                models in other languages like C and Java.
+
+                The event loop is the secret behind JavaScript's asynchronous programming. we all know that
+                JavaScript is a single thread but using a few smart data structures, gives us the illusion of
+                multi-threading. The event loop is a process that waits for the Call Stack to be clear before pushing
+                callbacks from the Task Queue to the Call Stack. Once the Stack is clear, the event loop triggers and
+                checks the Task Queue for available callbacks.</p>
+        </div>
     </div>
 
-    <div>
+    <div class="how-function-work">
         <div>
-            <h1>What is the work of quizTimer() function ?</h1>
-            <p>The quizTimer() function counts how long the user takes time to answer all the questions and also displays the time in the result. quizTimer() function takes a boolean parameter count time using the function setInterval()  and displays the time.</p>
+            <h3>What is the work of quizTimer() function ?</h3>
+            <p>The quizTimer() function counts how long the user takes time to answer all the questions and also
+                displays the time in the result. quizTimer() function takes a boolean parameter count time using the
+                function setInterval() and displays the time.</p>
         </div>
         <div>
-            <h1>What is the work of chooseQuiz() function ?</h1>
-            <p>The quizTimer() function counts how long the user takes time to answer all the questions and also displays the time in the result. quizTimer() function takes a boolean parameter count time using the function setInterval()  and displays the time.</p>
+            <h3>What is the work of chooseQuiz() function ?</h3>
+            <p>chooseQuiz function match the question answer is correct or not. This chooseQuiz takes two parameter one
+                is index and the other one givenAns. First, it finds the answer put in a variable then it match question
+                to the answer.</p>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-  </body>
+    <button type="button" class="btn btn-primary" onclick="">Quix Hero</button>
+    <script>
+        function backToHome() {
+            location.href = '';
+        }
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
