--- a/blog.html
+++ b/blog.html
@@ -126,10 +126,10 @@
                 to the answer.</p>
         </div>
     </div>
-    <button type="button" class="btn btn-primary" onclick="">Quix Hero</button>
+    <button type="button" class="btn btn-primary" onclick="backToHome()">Quix Hero</button>
     <script>
         function backToHome() {
-            location.href = '';
+            location.href = 'index.html';
         }
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
